--- a/gb/17/2/20/n8828832.md
+++ b/gb/17/2/20/n8828832.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/onzhi266/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/onzhi266/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/onzhi266/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/onzhi266/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/onzhi266/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>鲜为人知的“两弹一星”专家受迫害经历</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2004/10/410212431974.jpg" />
 <h6>文革十年当中，惨遭文革批斗的人不计其数，凡是知识阶级、地主、部分高官都曾经历被众人唾骂、丢石头、棒打、黑牢监禁等酷刑，千年文明毁于一旦。（大纪元资料图片）
 </h6>
 <hr>
-<p>【大纪元2017年02月20日讯】几日前，中共“两弹一星功臣”、中国科学院院士任新民去世的消息占据了各地网站的重要位置。“两弹一星”指的是核弹、导弹和人造卫星。根据中共官方资料，中国第一颗原子弹于1964年10月16日爆炸成功，中国第一颗装有核弹头的地地导弹于1966年10月27日飞行爆炸成功；1967年6月17日，中国第一颗氢弹空爆试验成功；1970年4月24日，中国第一颗人造卫星发射成功。</p>
-<p>中共能在建政后短时间内掌握“两弹一星”技术，除了有苏联的帮助外，还主要依靠大多是从海外归来的23名科学家，当局将他们视为“两弹一星元勋”，并在1999年授予或追授功勋奖章。这23名科学家除了任新民，还有于敏、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E7%8F%A9.md#1">王大珩</a>、王希季、朱光亚、孙家栋、吴自良、陈芳允、陈能宽、杨嘉墀、周光召、钱学森、屠守锷、黄纬禄、程开甲、彭桓武、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E6%B7%A6%E6%98%8C.md#1">王淦昌</a>、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%82%93%E7%A8%BC%E5%85%88.md#1">邓稼先</a>、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E8%B5%B5%E4%B9%9D%E7%AB%A0.md#1">赵九章</a>、姚桐斌、钱骥、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%92%B1%E4%B8%89%E5%BC%BA.md#1">钱三强</a>、郭永怀。</p>
+	<p>【大纪元2017年02月20日讯】几日前，中共“两弹一星功臣”、中国科学院院士任新民去世的消息占据了各地网站的重要位置。“两弹一星”指的是核弹、导弹和人造卫星。根据中共官方资料，中国第一颗原子弹于1964年10月16日爆炸成功，中国第一颗装有核弹头的地地导弹于1966年10月27日飞行爆炸成功；1967年6月17日，中国第一颗氢弹空爆试验成功；1970年4月24日，中国第一颗人造卫星发射成功。</p>
+<p>中共能在建政后短时间内掌握“两弹一星”技术，除了有苏联的帮助外，还主要依靠大多是从海外归来的23名科学家，当局将他们视为“两弹一星元勋”，并在1999年授予或追授功勋奖章。这23名科学家除了任新民，还有于敏、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E7%8F%A9.md#1">王大珩</a>、王希季、朱光亚、孙家栋、吴自良、陈芳允、陈能宽、杨嘉墀、周光召、钱学森、屠守锷、黄纬禄、程开甲、彭桓武、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%B7%A6%E6%98%8C.md#1">王淦昌</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E7%A8%BC%E5%85%88.md#1">邓稼先</a>、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%B5%E4%B9%9D%E7%AB%A0.md#1">赵九章</a>、姚桐斌、钱骥、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%92%B1%E4%B8%89%E5%BC%BA.md#1">钱三强</a>、郭永怀。</p>
 <p>然而，鲜为人知的是，这23人中除了少数受到特殊保护外，很多人同样没有逃过中共的迫害。</p>
 <p><strong>导弹与航太材料专家姚桐斌被活活打死</strong></p>
 <p>姚桐斌，是著名的导弹和航太材料与工艺技术专家，中国导弹与航太材料、工艺技术研究所的主要创建者之一。早年曾赴英国伯明罕大学工业冶金系留学，1951年获博士学位。1954年赴联邦德国亚亨工业大学冶金系铸造研究室任研究员兼教授助理。</p>
@@ -19,17 +19,17 @@
 <p>原来，当天一群红卫兵闯进了姚桐斌家，先是打了他一顿耳光，接着将他连拖带推地架下楼去，进行毒打。“一个家伙一面狠狠地踢姚桐斌的会阴部，一面歇斯底里地嚎叫着，他的吼声引来了更多的暴徒。这时有两个暴徒举起钢棍，向姚桐斌的头部猛击，鲜血立刻冒出，他倒下了”。这群暴徒并未甘休，继续将其拖到他们的“总部”。待他们发现人已不行，又赶快送回了其家楼前的人行道上。</p>
 <p>姚桐斌的邻居和保姆赶快将其送到医院抢救，却被拒绝医治。邻居和保姆只得将其抬回了家。由于他头部几处受重伤，最终惨死在家中，时年46岁。据悉，操纵这起恶性事件的当权派们并未受到追究。</p>
 <p>文革结束后的1978年，中共授予了姚桐斌“烈士”称号，人已经死了，这样的“荣誉”又有什么用呢？</p>
-<p><strong>核子物理学家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%82%93%E7%A8%BC%E5%85%88.md#1">邓稼先</a>夫妇被批斗 三姐自杀</strong></p>
+<p><strong>核子物理学家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%82%93%E7%A8%BC%E5%85%88.md#1">邓稼先</a>夫妇被批斗 三姐自杀</strong></p>
 <p>提前邓稼先的名字，很多人马上会将其与核子试验联系在一起。毕业于西南联合大学的邓稼先，于1948年赴美国留学并获物理学博士学位。1950年回国，1956年加入中共。曾任核工业部第九研究院副院长、院长，核工业部科委副主任等，负责原子弹、氢弹的研制，其领导完成了原子弹的理论方案，并参与指导核子试验的爆轰模拟试验。生前共参与了32次核子试验，其中亲自去罗布泊指挥试验就达15次。因为缺乏必要的防护，长期受辐射伤害的他，最终患直肠癌去世。</p>
 <p>文革中，邓稼先及其家人同样没能避免厄运。邓稼先的夫人、北京医学院的教授许鹿希，先是被打成彭真、刘仁“黑市委”的“黑帮分子”，贴大字报的浆糊弄了她一身，使她精神几乎崩溃。当时邓稼先不见妻子回家，就到北京医学院寻找。当他看到妻子被批斗后的惨景，心都快碎了。</p>
 <p>其后，邓稼先甚为敬重的三姐，因忍受不了造反派无休止的折磨，选择了自杀。</p>
-<p>1971年，文革狂风侵袭九院，邓稼先、于敏、<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E8%B5%B5%E4%B9%9D%E7%AB%A0.md#1">赵九章</a>等人也被集中到青海基地遭受批斗。许鹿希说，那时“四人帮”有个计划，要把搞核武器的人打掉。当时有个口号： “会英文的就是美国特务，会俄文的就是苏联特务”，可见迫害之烈。其后，因杨振宁从美国来访，中共将邓稼先放回了北京。</p>
+<p>1971年，文革狂风侵袭九院，邓稼先、于敏、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%B5%B5%E4%B9%9D%E7%AB%A0.md#1">赵九章</a>等人也被集中到青海基地遭受批斗。许鹿希说，那时“四人帮”有个计划，要把搞核武器的人打掉。当时有个口号： “会英文的就是美国特务，会俄文的就是苏联特务”，可见迫害之烈。其后，因杨振宁从美国来访，中共将邓稼先放回了北京。</p>
 <p>这里还要说一说邓稼先最优秀的弟子、名不见经传的研究员赵楚。网上有帖子披露，核弹最关键的核心技术需要攻克一个无比复杂的函数方程，而攻克这个方程式的正是赵楚。由于方程过于复杂，只有赵楚一个人会算，为了方便别人使用，他做了一份好几页的多元函数对照表，造每一颗核弹需要的最关键资料，都要从表上查阅。为了保密起见，这份表只有一份，收藏在大西北荒漠深处某核弹工程基地的一间密室里。</p>
 <p>文革爆发后的1969年，赵楚遭到批斗，并被造反派锁进了存放那份关键函数表的密室。三天，吃不到一粒米，喝不到一滴水的赵楚，决然将那份独一无二的函数表，吞进了胃里，随后咬牙用钢笔尖挑开了自己的动脉自杀。</p>
 <p>邓稼先闻听后，悲痛欲绝，将建立那个关键的函数方程所需的一切资料折成纸钱，在赵楚的坟前焚毁。也就是从那时起，中共制造核弹最关键的部分失传了。</p>
 <p>1986年邓稼先去世前，中央派去的干部焦急地立在他的床头，几乎以哀求的口气求他重建函数方程。</p>
 <p>邓稼先的回复是：我闭上眼睛，就看到赵楚的血，他让我明白了一个道理，让毁灭性的力量掌握在不该掌握它的势力手中，对人类是一种犯罪。这样的晚醒悟已经太迟了。</p>
-<p><strong>核子物理学家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E9%92%B1%E4%B8%89%E5%BC%BA.md#1">钱三强</a>夫妇被下放</strong></p>
+<p><strong>核子物理学家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%92%B1%E4%B8%89%E5%BC%BA.md#1">钱三强</a>夫妇被下放</strong></p>
 <p>钱三强是中国第一代核子物理学家、中国近代原子能事业的开拓者和奠基人之一，其妻子何泽慧与其是巴黎大学居里实验室的同事，他们被称为“中国的居里夫妇”。</p>
 <p>1948年5月，钱三强与何泽慧夫妇怀着报效祖国的心愿回到了中国。在1955年中国核武器研制计划秘密诞生后，钱三强成为了一个特殊人物，主导原子弹的研制。</p>
 <p>钱三强选用年轻的邓稼先出任二机部九所理论部主任，邓稼先成为中国原子弹理论设计实际上的总负责人。在钱三强等人的调动和组织下，中科院、二机部以及后来成立的核工业部第九研究院三家，合在一起处理一系列原子弹、氢弹研制过程中的技术问题。</p>
@@ -37,12 +37,12 @@
 <p>钱三强去河南搞“四清”，连名字也被改成了徐进。“四清运动”是文革的前奏，短短的两三年里就有500多万人挨整，7万7千多人被迫害致死。</p>
 <p>文革爆发后的1969年10月27日，钱三强接到通知，让他三天内离开北京，去陕西合阳“五七干校”。走之前他壮着胆子提出，希望能和何泽慧一同到干校去劳动，好相互有个照应。当时他的要求没有被批准，直到12月1日，何泽慧才被批准去了合阳干校。当时的钱三强已年逾花甲，对各种农活很陌生，但还是什么活都得干。钱三强夫妇的三个孩子，也被下放到陕西农村。</p>
 <p>1992年钱三强离世，1999年中共授勋，被中共生前死后当成 “爱国”道具的钱三强，地下有知会作何感想呢？</p>
-<p><strong>物理学家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E6%B7%A6%E6%98%8C.md#1">王淦昌</a>罪名无数</strong></p>
+<p><strong>物理学家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E6%B7%A6%E6%98%8C.md#1">王淦昌</a>罪名无数</strong></p>
 <p>著名物理学家王淦昌于1998年离世。他是中国核武器研制的主要奠基人之一，早年留学德国柏林大学，获得博士学位，后受中共的影响回国，其主要研究成果包括：1941年关于探测中微子的建议；1959年在苏联杜布纳联合原子核研究所发现反西格马负超子；1964年关于核聚变实验的设想；1984年关于受控核聚变的建议，以及参与研制原子弹氢弹的工作。</p>
 <p>1957年反右运动中，被王淦昌召回的在浙江大学工作的学生许良英和周志成，都被打成了右派。王淦昌给予他们尽可能的帮助，甚至从四川核基地按月给许良英寄出30元钱，支持许的生活。</p>
 <p>文革爆发后，王淦昌也成为批斗的对象，“资产阶级反动学术权威”“活命哲学”“扰乱军心”，罪名数不清。甚至同情和支持王淦昌的人，也被抓了起来，还用假枪毙逼吓，要其交代与王淦昌的关系。</p>
 <p>活过文革的王淦昌继续从事科研工作，不知彼时的他是否对中共有了新的认识？</p>
-<p><strong>光学专家<ahref="https://github.com/onzhi266/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E7%8F%A9.md#1">王大珩</a>扫厕所</strong></p>
+<p><strong>光学专家<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%8E%8B%E5%A4%A7%E7%8F%A9.md#1">王大珩</a>扫厕所</strong></p>
 <p>出生于日本，毕业于英国伦敦大学帝国学院物理系技术光学专业的王大珩，被中共视为“中国光学界的重要学术奠基人、开拓者和组织领导者”，他在雷射技术、遥感技术、计量科学、色度标准等方面都做出了重要贡献。</p>
 <p>1949年中共建政后，原本在英国工作的王大珩选择了回国，在大连大学短暂任职后，前往中国科学院长春光学精密机械研究所任研究员和所长。长春光机所是当时技术力量较强的研究机构，上世纪60年代初，精确测量导弹运行轨道参数等一批大型国防工程陆续在这里上马。</p>
 <p>文革爆发后，初期因受到军队保护，光机所没有出什么大事，但随后在吉林省革命委员会主任王淮湘的支持下，时任吉林省科技局党组书记、局长的单奎章将光机所166名老科学家和青年科技人员打成特务，有10位科技人员被害死。</p>
@@ -66,49 +66,46 @@
 <p>中共这些“两弹一星”的功臣，在客观上起了某种程度的助纣为虐的作用。他们很多人遭受迫害的经历，可以让人看清与中共共舞的危险，让人反思。</p>
 <p>或许邓稼先的晚年醒悟可以警示他们的追随者：让毁灭性的力量掌握在不该掌握它的势力手中，对人类是一种犯罪。＃</p>
 <p>责任编辑：高义</p>
-
+	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/9/n8686097.md#1">留在大陆的中华民国院士之大结局（一）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/16/7/27/n8143459.md#1">张东园：中共迫害文化精英实录（三）</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/14/3/8/n4101190.md#1">【网文】 民国为何出大师？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/13/10/4/n3978704.md#1">【林辉】“人造卫星之父”赵九章缘何自杀？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/13/8/6/n3935066.md#1">【林辉】帮助中共发展“两弹一星”的功臣的结局</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/13/4/13/n3845333.md#1">【史海】国人都被骗 中共如此打造“英雄”</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/13/1/12/n3775310.md#1">黄河清：1949年后中国大陆科学家景况一览</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/13/1/9/n3772077.md#1">【夏小强】：与五毛闲聊美国、民主、暴政和历史（二）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/9/n3772077.md#1">【夏小强】：与五毛闲聊美国、民主、暴政和历史（二）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/1/12/n3775310.md#1">黄河清：1949年后中国大陆科学家景况一览</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/4/13/n3845333.md#1">【史海】国人都被骗 中共如此打造“英雄”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/8/6/n3935066.md#1">【林辉】帮助中共发展“两弹一星”的功臣的结局</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/17/1/9/n8686097.md#1">留在大陆的中华民国院士之大结局（一）</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/26/n10809856.md#1" target="_blank">严家伟：人间地狱，四川古蔺岔角滩</a></li><li><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/29/n11486472.md#1" target="_blank">听音乐喜得大法 以色列学员伦敦街头讲真相</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10243539.md#1" target="_blank">中共淫乱的前生今世（5）公共情妇门</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/5/n10617345.md#1" target="_blank">婆媳恩怨千千结 一本宝书解枷锁</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/29/n11905232.md#1">蝗虫群攻官府异象 为何吃尽画像人头？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/28/n11903572.md#1">末代国君的风范 顺从天意的元惠宗</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/2/n11909596.md#1">【命理】什么样的女子能够旺夫？</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948158.md#1">【现场视频】湖北襄阳菜农夜色中卖菜</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947678.md#1">【现场视频】武汉江岸区又有人跳楼</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11948263.md#1">【现场视频】武汉居民求助 官称：死你一个不少</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615078.md#1">刘凯文：香港抗疫政策混乱 遗体滞留急症室</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/onzhi266/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/20/n8828832.htm">鲜为人知的“两弹一星”专家受迫害经历</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/20/n8828832.htm">鲜为人知的“两弹一星”专家受迫害经历</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/onzhi266/djy/blob/master/gb/17/2/20/n8828832.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/onzhi266/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/onzhi266/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/onzhi266/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/onzhi266/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/17/2/20/n8828832.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
